--- a/praticas-de-programacao/funcoes.html
+++ b/praticas-de-programacao/funcoes.html
@@ -17,5 +17,6 @@
         <input type="button" value="Multiplicar" onclick="calcular('*')">
         <input type="button" value="Dividir" onclick="calcular('/')">
     </form>
+    <div id="resultado"></div>
 </body>
 </html>
