--- a/loja/index.html
+++ b/loja/index.html
@@ -5,66 +5,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/SubwayBasket.svg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <title>Lojinha</title>
 </head>
 <body>
-    <h1>Lojinha da Unidade</h1>
-
-    <table>
-        <thead>
-            <tr>
-                <th>Imagem</th>
-                <th>Produto</th>
-                <th>Preço Unitário</th>
-                <th>Quantidade</th>
-                <th>Total</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>
-                    <img src="imagens/relogio.jpg" alt="Smartwatch" width="200" height="200">
-                </td>
-                <td>
-                    <div>Smartwatch Samsumg</div>
-                    <div>Código: 986336</div>
-                    <div>Cor: Preto</div>
-                </td>
-                <td>1000</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="imagens/celular.jpg" alt="Smartphone" width="200" height="200">
-                </td>
-                <td>
-                    <div>Smartphone Samsumg</div>
-                    <div>Código: 897421</div>
-                    <div>Cor: Rose</div>
-                </td>
-                <td>2000</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td>
-                    <img src="imagens/tv.jpg" alt="Tv" width="200" height="200">
-                </td>
-                <td>
-                    <div>Tv Smart Samsumg</div>
-                    <div>Código: 574319</div>
-                    <div>Cor: Preto</div>
-                </td>
-                <td>3000</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <footer>
-        <span>Subtotal: R$ 0</span>
-    </footer>
+    <div class="container">
+        <h1><i class="bi bi-currency-dollar"></i> Lojinha da Unidade</h1>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Imagem</th>
+                    <th>Produto</th>
+                    <th>Preço Unitário</th>
+                    <th>Quantidade</th>
+                    <th>Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <img src="imagens/relogio.jpg" alt="Smartwatch" width="200" height="200">
+                    </td>
+                    <td>
+                        <div>Smartwatch Samsumg</div>
+                        <div>Código: 986336</div>
+                        <div>Cor: Preto</div>
+                    </td>
+                    <td>1000</td>
+                    <td>
+                        <span class="badge bg-danger"><i class="bi bi-dash-circle"></i></span>
+                        0
+                        <span class="badge bg-success"><i class="bi bi-plus-circle"></i></span>
+                    </td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="imagens/celular.jpg" alt="Smartphone" width="200" height="200">
+                    </td>
+                    <td>
+                        <div>Smartphone Samsumg</div>
+                        <div>Código: 897421</div>
+                        <div>Cor: Rose</div>
+                    </td>
+                    <td>2000</td>
+                    <td>
+                        <span class="badge bg-danger"><i class="bi bi-dash-circle"></i></span>
+                        0
+                        <span class="badge bg-success"><i class="bi bi-plus-circle"></i></span>
+                    </td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="imagens/tv.jpg" alt="Tv" width="200" height="200">
+                    </td>
+                    <td>
+                        <div>Tv Smart Samsumg</div>
+                        <div>Código: 574319</div>
+                        <div>Cor: Preto</div>
+                    </td>
+                    <td>3000</td>
+                    <td>
+                        <span class="badge bg-danger"><i class="bi bi-dash-circle"></i></span>
+                        0
+                        <span class="badge bg-success"><i class="bi bi-plus-circle"></i></span>
+                    </td>
+                    <td>0</td>
+                </tr>
+            </tbody>
+        </table>
+        <footer class="text text-center">
+            <span><i class="bi bi-cart-check"></i> Subtotal: R$ 0</span>
+        </footer>
+    </div>
 </body>
 </html>
