--- a/loja/index.html
+++ b/loja/index.html
@@ -7,11 +7,12 @@
     <link rel="shortcut icon" href="imagens/SubwayBasket.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Lojinha</title>
 </head>
 <body>
     <div class="container">
-        <h1><i class="bi bi-currency-dollar"></i> Lojinha da Unidade</h1>
+        <h1><i id="cifrao" class="bi bi-currency-dollar"></i> Lojinha da Unidade</h1>
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -29,8 +30,8 @@
                     </td>
                     <td>
                         <div>Smartwatch Samsumg</div>
-                        <div>Código: 986336</div>
-                        <div>Cor: Preto</div>
+                        <div><span class="produto-item">Código:</span> 986336</div>
+                        <div><span class="produto-item">Cor:</span> Preto</div>
                     </td>
                     <td>1000</td>
                     <td>
@@ -46,8 +47,8 @@
                     </td>
                     <td>
                         <div>Smartphone Samsumg</div>
-                        <div>Código: 897421</div>
-                        <div>Cor: Rose</div>
+                        <div><span class="produto-item">Código:</span> 897421</div>
+                        <div><span class="produto-item">Cor:</span> Rose</div>
                     </td>
                     <td>2000</td>
                     <td>
@@ -63,8 +64,8 @@
                     </td>
                     <td>
                         <div>Tv Smart Samsumg</div>
-                        <div>Código: 574319</div>
-                        <div>Cor: Preto</div>
+                        <div><span class="produto-item">Código:</span> 574319</div>
+                        <div><span class="produto-item">Cor:</span> Preto</div>
                     </td>
                     <td>3000</td>
                     <td>
