--- a/loja/index.html
+++ b/loja/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="imagens/SubwayBasket.svg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <script src="js/funcoes.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Lojinha</title>
 </head>
@@ -33,13 +34,13 @@
                         <div><span class="produto-item">Código:</span> 986336</div>
                         <div><span class="produto-item">Cor:</span> Preto</div>
                     </td>
-                    <td>1000</td>
+                    <td id="valor_1">1000</td>
                     <td>
-                        <span class="badge bg-danger"><i class="bi bi-dash-circle"></i></span>
-                        0
-                        <span class="badge bg-success"><i class="bi bi-plus-circle"></i></span>
+                        <span class="badge bg-danger" onclick="alterarQtd(1, '-')"><i class="bi bi-dash-circle"></i></span>
+                        <span id="qtd_1">0</span>
+                        <span class="badge bg-success" onclick="alterarQtd(1, '+')"><i class="bi bi-plus-circle"></i></span>
                     </td>
-                    <td>0</td>
+                    <td id="total_1">0</td>
                 </tr>
                 <tr>
                     <td>
@@ -50,13 +51,13 @@
                         <div><span class="produto-item">Código:</span> 897421</div>
                         <div><span class="produto-item">Cor:</span> Rose</div>
                     </td>
-                    <td>2000</td>
+                    <td id="valor_2">2000</td>
                     <td>
-                        <span class="badge bg-danger"><i class="bi bi-dash-circle"></i></span>
-                        0
-                        <span class="badge bg-success"><i class="bi bi-plus-circle"></i></span>
+                        <span class="badge bg-danger" onclick="alterarQtd(2, '-')"><i class="bi bi-dash-circle"></i></span>
+                        <span id="qtd_2">0</span>
+                        <span class="badge bg-success" onclick="alterarQtd(2, '+')"><i class="bi bi-plus-circle"></i></span>
                     </td>
-                    <td>0</td>
+                    <td id="total_2">0</td>
                 </tr>
                 <tr>
                     <td>
@@ -67,18 +68,18 @@
                         <div><span class="produto-item">Código:</span> 574319</div>
                         <div><span class="produto-item">Cor:</span> Preto</div>
                     </td>
-                    <td>3000</td>
+                    <td id="valor_3">3000</td>
                     <td>
-                        <span class="badge bg-danger"><i class="bi bi-dash-circle"></i></span>
-                        0
-                        <span class="badge bg-success"><i class="bi bi-plus-circle"></i></span>
+                        <span class="badge bg-danger" onclick="alterarQtd(3, '-')"><i class="bi bi-dash-circle"></i></span>
+                        <span id="qtd_3">0</span>
+                        <span class="badge bg-success" onclick="alterarQtd(3, '+')"><i class="bi bi-plus-circle"></i></span>
                     </td>
-                    <td>0</td>
+                    <td id="total_3">0</td>
                 </tr>
             </tbody>
         </table>
         <footer class="text text-center">
-            <span><i class="bi bi-cart-check"></i> Subtotal: R$ 0</span>
+            <span><i class="bi bi-cart-check"></i> Subtotal: R$ <span id="subtotal">0</span></span>
         </footer>
     </div>
 </body>
